--- a/docs/source/usage_demos/multitaper_estimator.ipynb
+++ b/docs/source/usage_demos/multitaper_estimator.ipynb
@@ -24,24 +24,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# basic stuff\n",
+    "import numpy as np\n",
+    "from scipy.signal import periodogram, detrend\n",
+    "import scipy.stats.distributions as dists\n",
+    "\n",
+    "# Ecog stuff\n",
     "import ecoglib.estimation.multitaper as mt\n",
     "from ecogdata.devices.data_util import load_experiment_auto\n",
     "from ecogdata.trigger_fun import extract_epochs\n",
     "from ecoglib.vis.tile_images import tile_traces_1ax\n",
     "from ecoglib.vis.ani import animate_frames\n",
-    "from ecoglib.vis.plot_util import filled_interval"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from scipy.signal import periodogram, detrend\n",
-    "import scipy.stats.distributions as dists\n",
-    "from nitime.algorithms import multi_taper_csd, multi_taper_psd\n",
+    "from ecoglib.vis.plot_util import filled_interval\n",
+    "\n",
+    "# Other plotting stuff\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import rcParams\n",
     "import seaborn as sns\n",
@@ -257,7 +253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Despite the larger in-window bias, the multitaper PSD has much less estimator variance than either the boxcar or Hamming-window periodogram. Note the amount of deviation from the $1/f$ transistor noise spectrum in the different estimates."
+    "Despite the larger in-window bias, the multitaper PSD has much less estimator variance than either the boxcar or Hamming-window periodogram. Note the amount of deviation from the $1/f$ LFP + transistor noise spectrum in the different estimates."
    ]
   },
   {
@@ -414,7 +410,8 @@
     "axs[1].set_yscale('log')\n",
     "axs[1].set_xscale('log')\n",
     "# axs.loglog(freqs, mt_psd_3)\n",
-    "axs[1].set_ylim(bottom=1e-1)\n",
+    "f_cutoff = freqs.searchsorted(freqs.max() * 0.9)\n",
+    "axs[1].set_ylim(bottom=0.25 * ci_1[0][f_cutoff])\n",
     "axs[1].set_xlim(left=0.5)\n",
     "axs[0].legend()\n",
     "axs[1].legend()\n",
@@ -436,7 +433,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_tone_responses = extract_epochs(data.data, data.exp, pre=64, post=256 - 64)\n",
+    "fft_pts = 256\n",
+    "all_tone_responses = extract_epochs(data.data, data.exp, pre=64, post=fft_pts - 64)\n",
     "all_tone_responses = detrend(all_tone_responses, type='linear', axis=-1)\n",
     "row_tone_responses = np.array([all_tone_responses[data.chan_map.lookup(3, i)] for i in range(8)])\n",
     "tone_ss = np.sum(np.sum(row_tone_responses ** 2, axis=0), axis=1)\n",
@@ -451,7 +449,7 @@
    "source": [
     "fig = tile_traces_1ax(all_tone_responses[:, big_tone], \n",
     "                      p=data.chan_map, \n",
-    "                      twin=(-64 / data.Fs, (256 - 64) / data.Fs),\n",
+    "                      twin=(-64 / data.Fs, (fft_pts - 64) / data.Fs),\n",
     "                      calib_unit='uV', \n",
     "                      linewidths=0.5)"
    ]
@@ -545,14 +543,8 @@
     "for trial in all_8k:\n",
     "    x = np.array([all_tone_responses[chan, trial] for chan in row_sites])\n",
     "    coh_spec = mt.coherence(x, 2.5, msc=True)\n",
-    "#     # do Fisher xform on real/imag separately before averaging over trials\n",
-    "#     coh_spec.real[:] = np.arctanh(coh_spec.real)\n",
-    "#     coh_spec.imag[:] = np.arctanh(coh_spec.imag)\n",
     "    coh_specs.append(coh_spec)\n",
-    "coh_spec_avg = np.mean(coh_specs, axis=0)\n",
-    "# coh_spec_avg.real[:] = np.tanh(coh_spec_avg.real)\n",
-    "# coh_spec_avg.imag[:] = np.tanh(coh_spec_avg.imag)\n",
-    "# coh_spec_avg = mt._circular_clip(coh_spec_avg)"
+    "coh_spec_avg = np.mean(coh_specs, axis=0)"
    ]
   },
   {
@@ -616,13 +608,6 @@
    "source": [
     "## Todo: higher order spectra, spectrograms"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
