--- a/docs/source/usage_demos/multitaper_estimator.ipynb
+++ b/docs/source/usage_demos/multitaper_estimator.ipynb
@@ -78,11 +78,18 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext"
+   },
+   "source": [
+    "Use the :py:class:`MultitaperEstimator <ecoglib.estimation.multitaper.MultiTaperEstimator>` class from :py:mod:`ecogdata.estimation.multitaper` to analyze the spectrum."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use the `MultitaperEstimator` class from `ecogdata.estimation.multitaper` to analyze the spectrum.\n",
-    "\n",
     "The NW parameter and the resulting eigenvalues relate to the \"spectral concentration\" property of DPSS. NW is a \"time-bandwidth\" product. The main lobe of the the DPSS spectrum is about ±NW DFT frequency bins wide. Also, the ratio of energy inside the lobe versus total signal energy is given by the eigenvalue.\n",
     "\n",
     "Since the DFT bin size is $1/N$, the simple (normalized) bandwidth identity is $W_{(n)}=NW(1/N)$. Note that\n",
@@ -321,7 +328,7 @@
     "\\frac{A_{\\omega}^{2}+B_{\\omega}^{2}}{\\sigma_{x}^{2}/2}=\\frac{2\\hat{S}_{\\omega}}{\\sigma_{x}^{2}}\\sim \\chi^{2}_{2}\n",
     "\\end{equation}\n",
     "\n",
-    "Asymptotically (as $N\\rightarrow \\infty$) \\sigma_{x}^{2} is replaced by the *true* power spectral density (the quantity we're trying to estimate) for this fundamental result\n",
+    "Asymptotically (as $N\\rightarrow \\infty$) $\\sigma_{x}^{2}$ is replaced by the *true* power spectral density (the quantity we're trying to estimate) for this fundamental result\n",
     "\n",
     "\\begin{equation}\n",
     "\\frac{2\\hat{S}_{\\omega}}{S_{\\omega}}\\sim \\chi^{2}_{2}\n",
@@ -611,6 +618,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Raw Cell Format",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
