resampling updates: need spawn tests in windo

--- a/docs/source/usage_demos/resampling_methods.ipynb
+++ b/docs/source/usage_demos/resampling_methods.ipynb
@@ -22,6 +22,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import multiprocessing as mp\n",
+    "mp.set_start_method('forkserver')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ['OMP_NUM_THREADS'] = '1'\n",
+    "os.environ['VECLIB_MAXIMUM_THREADS'] = '1'\n",
+    "os.environ['NUMEXP_NUM_THREADS'] = '1'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import numpy as np\n",
     "np.random.seed(108774)\n",
     "import scipy.stats.distributions as dists\n",
@@ -79,8 +101,9 @@
    "outputs": [],
    "source": [
     "with np.printoptions(precision=2, suppress=True):\n",
+    "    print('Real sample:', np.sort(x_norm))\n",
     "    for n, samp in enumerate(bs.sample()):\n",
-    "        print('Fake sample {}:'.format(n + 1), samp)\n",
+    "        print('Fake sample {}:'.format(n + 1), np.sort(samp))\n",
     "        if n == 2:\n",
     "            break"
    ]
@@ -343,7 +366,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ols_fm.scale, ols_fm.ssr / 54"
+    "ols_fm.scale, ols_fm.ssr / ols_fm.df_resid"
    ]
   },
   {
@@ -416,7 +439,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bootstrapper = resampling.Bootstrap([x, y], 1000, n_jobs=None)\n",
+    "bootstrapper = resampling.Bootstrap([x, y], 1000)\n",
     "fits = np.array([p for p in bootstrapper.sample(estimator=compute_ols)])"
    ]
   },
@@ -474,6 +497,181 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Computing estimates in parallel\n",
+    "\n",
+    "Resampling methods can be resource intensive for any but the most trivial estimators, but the repeated function calls can be done independently on multiple processes. **Due to the overhead involved in creating new processes, going parallel would only make sense for costly estimation functions.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from importlib import reload\n",
+    "reload(resampling)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from time import sleep, time\n",
+    "\n",
+    "\n",
+    "def slow_mean(x):\n",
+    "    mu = x.mean()\n",
+    "    sleep(0.05)\n",
+    "    return mu\n",
+    "\n",
+    "\n",
+    "# reuse the normal distribution\n",
+    "N = int(5e6)\n",
+    "x_norm = sample_dist.rvs(size=N)\n",
+    "\n",
+    "# run in a single process\n",
+    "t1 = time()\n",
+    "mu_est = resampling.Bootstrap.bootstrap_estimate(x_norm, 100, slow_mean, n_jobs=1)\n",
+    "tc = time() - t1\n",
+    "print('mu estimate: {} ({} sec)'.format(mu_est, tc))\n",
+    "\n",
+    "# run in 6 processes\n",
+    "t1 = time()\n",
+    "mu_est = resampling.Bootstrap.bootstrap_estimate(x_norm, 100, slow_mean, n_jobs=6)\n",
+    "tc = time() - t1\n",
+    "print('mu estimate: {} ({} sec)'.format(mu_est, tc))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Getting all samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reuse the normal distribution\n",
+    "N = int(1e6)\n",
+    "x_norm = sample_dist.rvs(size=N)\n",
+    "\n",
+    "t1 = time()\n",
+    "bs = resampling.Bootstrap(x_norm, 1000, n_jobs=1)\n",
+    "all_samps1 = bs.all_samples()\n",
+    "tc = time() - t1\n",
+    "print('serial collect: {} sec'.format(tc))\n",
+    "\n",
+    "t1 = time()\n",
+    "bs = resampling.Bootstrap(x_norm, 1000, n_jobs=6)\n",
+    "all_samps2 = bs.all_samples()\n",
+    "tc = time() - t1\n",
+    "print('para collect: {} sec'.format(tc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reuse the normal distribution\n",
+    "N = int(1e6)\n",
+    "x_norm = sample_dist.rvs(size=N)\n",
+    "\n",
+    "t1 = time()\n",
+    "bs = resampling.Bootstrap(x_norm, 1000, n_jobs=1, alloc_shared=False)\n",
+    "all_samps1 = bs.all_samples()\n",
+    "tc = time() - t1\n",
+    "print('serial collect: {} sec'.format(tc))\n",
+    "\n",
+    "t1 = time()\n",
+    "bs = resampling.Bootstrap(x_norm, 1000, n_jobs=6, alloc_shared=False)\n",
+    "all_samps2 = bs.all_samples()\n",
+    "tc = time() - t1\n",
+    "print('para collect: {} sec'.format(tc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del all_samps1\n",
+    "del all_samps2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gc\n",
+    "while gc.collect():\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cProfile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cProfile.runctx(\"bs = resampling.Bootstrap(x_norm, 1000, n_jobs=1); all_samps1 = bs.all_samples()\", globals(), locals())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cProfile.runctx(\"bs = resampling.Bootstrap(x_norm, 1000, n_jobs=6); all_samps1 = bs.all_samples()\", globals(), locals())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cProfile.runctx(\"bs = resampling.Bootstrap(x_norm, 1000, n_jobs=6, alloc_shared=False); all_samps1 = bs.all_samples()\", globals(), locals())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -498,7 +696,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
