some examples on parallel sampling

--- a/docs/source/usage_demos/resampling_methods.ipynb
+++ b/docs/source/usage_demos/resampling_methods.ipynb
@@ -23,7 +23,10 @@
    "outputs": [],
    "source": [
     "import multiprocessing as mp\n",
-    "mp.set_start_method('forkserver')"
+    "try:\n",
+    "    mp.set_start_method('fork')\n",
+    "except:\n",
+    "    pass"
    ]
   },
   {
@@ -188,6 +191,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Using a simple Bootstraper\n",
+    "\n",
+    "For convenience, the alpha-confidence interval (or the Bootstrapped standard error) can be requested from the Bootstrap estimator method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Bootstrap 95% confidence:', bs.estimate(np.mean, ci=0.95))\n",
+    "print('Boostrap standard error:', bs.estimate(np.mean, ci='se'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or even more simply (without creating a Bootstrap object)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mu, ci = resampling.Bootstrap.bootstrap_estimate(x_norm, P, np.mean, ci=0.95)\n",
+    "print(mu, ci)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Jackknife\n",
     "\n",
     "The [jackknife](https://en.wikipedia.org/wiki/Jackknife_resampling) predates bootstrap as a resampling method. It uses a leave-one-out resampling scheme, rather than resampling with replacement, which means that it can create only (up to) $N$ replicate estimators. For the sample $X_{i}$ (set notation omitted for simplicity), each jackknifed sample is\n",
@@ -228,7 +267,7 @@
     "def svar(x):\n",
     "    return np.mean((x - np.mean(x)) ** 2)\n",
     "\n",
-    "N = 15   # sample size\n",
+    "N = 30   # sample size\n",
     "# normal samples mean of 5, stdev 2\n",
     "sigma_sq = 4\n",
     "mu = 5\n",
@@ -506,13 +545,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from importlib import reload\n",
-    "reload(resampling)"
+    "For example, spinning up processes to parallelize the simple mean takes longer (on some architectures) than running all resamples on a single process: "
    ]
   },
   {
@@ -521,17 +557,76 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from time import sleep, time\n",
+    "from time import time\n",
+    "import multiprocessing as mp\n",
+    "\n",
+    "n_jobs = max(2, mp.cpu_count() // 2)\n",
+    "\n",
+    "# reuse the normal distribution\n",
+    "N = int(1e6)\n",
+    "x_norm = sample_dist.rvs(size=N)\n",
+    "\n",
+    "# run in a single process\n",
+    "t1 = time()\n",
+    "mu_est = resampling.Bootstrap.bootstrap_estimate(x_norm, 100, np.mean, n_jobs=1)\n",
+    "tc = time() - t1\n",
+    "print('mu estimate: {} ({} sec)'.format(mu_est, tc))\n",
+    "\n",
+    "# run in 6 processes\n",
+    "t1 = time()\n",
+    "mu_est = resampling.Bootstrap.bootstrap_estimate(x_norm, 100, np.mean, n_jobs=n_jobs)\n",
+    "tc = time() - t1\n",
+    "print('mu estimate: {} ({} sec, {} jobs)'.format(mu_est, tc, n_jobs))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Heavy computation time is simulated here with the \"sleep\" function.\n",
+    "\n",
+    "**A note about the bizarre syntax:**\n",
+    "\n",
+    "Multiprocessing works differently in Unix (using \"fork\") and Windows (using \"spawn\"), and this affects the ability to parallelize functions defined in the notebook.\n",
+    "\n",
+    "A function \"slow_mean\" is defined two ways here. If the multiprocessing startup is spawn mode, then the function is written to a temporary auxiliary module and imported. After importing, the temp file is deleted. If we're forking, then the method text is given to \"exec\" to literally execute the code in the string.\n",
+    "\n",
+    "These gymnastics are only required for the slightly contrived scenario where a method is defined within the notebook. As seen in the previous cell, externally defined methods can be split without the weird steps."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slow_mean_def = \"\"\"\n",
+    "from time import sleep\n",
     "\n",
     "\n",
     "def slow_mean(x):\n",
     "    mu = x.mean()\n",
     "    sleep(0.05)\n",
     "    return mu\n",
+    "\"\"\"\n",
+    "\n",
+    "forking = mp.get_start_method() == 'fork'\n",
+    "\n",
+    "# If forking, then define the method on this notebook\n",
+    "# Else, do some extra-module work-around\n",
+    "if forking:\n",
+    "    exec(slow_mean_def)\n",
+    "else:\n",
+    "    try:\n",
+    "        with open('temp_module.py', 'w') as f:\n",
+    "            f.write(slow_mean_def)\n",
+    "        from temp_module import slow_mean\n",
+    "    except:\n",
+    "        raise\n",
     "\n",
     "\n",
     "# reuse the normal distribution\n",
-    "N = int(5e6)\n",
+    "N = int(1e6)\n",
     "x_norm = sample_dist.rvs(size=N)\n",
     "\n",
     "# run in a single process\n",
@@ -540,33 +635,23 @@
     "tc = time() - t1\n",
     "print('mu estimate: {} ({} sec)'.format(mu_est, tc))\n",
     "\n",
-    "# run in 6 processes\n",
+    "# Run parallel in spawn/forkserver mode\n",
+    "\n",
+    "# run in multiple processes\n",
     "t1 = time()\n",
-    "mu_est = resampling.Bootstrap.bootstrap_estimate(x_norm, 100, slow_mean, n_jobs=6)\n",
+    "mu_est = resampling.Bootstrap.bootstrap_estimate(x_norm, 100, slow_mean, n_jobs=n_jobs)\n",
     "tc = time() - t1\n",
-    "print('mu estimate: {} ({} sec)'.format(mu_est, tc))"
+    "print('mu estimate: {} ({} sec, {} jobs)'.format(mu_est, tc, n_jobs))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Getting all samples"
+    "## Getting resampled data\n",
+    "\n",
+    "The Bootstrap/Jackknife objects can also return the resampled data when estimator is left blank. This is **not** generally accelerated with multiple jobs."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -575,17 +660,17 @@
    "outputs": [],
    "source": [
     "# reuse the normal distribution\n",
-    "N = int(1e6)\n",
+    "N = int(1e5)\n",
     "x_norm = sample_dist.rvs(size=N)\n",
     "\n",
     "t1 = time()\n",
-    "bs = resampling.Bootstrap(x_norm, 1000, n_jobs=1)\n",
+    "bs = resampling.Bootstrap(x_norm, 100, n_jobs=1)\n",
     "all_samps1 = bs.all_samples()\n",
     "tc = time() - t1\n",
     "print('serial collect: {} sec'.format(tc))\n",
     "\n",
     "t1 = time()\n",
-    "bs = resampling.Bootstrap(x_norm, 1000, n_jobs=6)\n",
+    "bs = resampling.Bootstrap(x_norm, 100, n_jobs=6)\n",
     "all_samps2 = bs.all_samples()\n",
     "tc = time() - t1\n",
     "print('para collect: {} sec'.format(tc))"
@@ -597,21 +682,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# reuse the normal distribution\n",
-    "N = int(1e6)\n",
-    "x_norm = sample_dist.rvs(size=N)\n",
-    "\n",
-    "t1 = time()\n",
-    "bs = resampling.Bootstrap(x_norm, 1000, n_jobs=1, alloc_shared=False)\n",
-    "all_samps1 = bs.all_samples()\n",
-    "tc = time() - t1\n",
-    "print('serial collect: {} sec'.format(tc))\n",
-    "\n",
-    "t1 = time()\n",
-    "bs = resampling.Bootstrap(x_norm, 1000, n_jobs=6, alloc_shared=False)\n",
-    "all_samps2 = bs.all_samples()\n",
-    "tc = time() - t1\n",
-    "print('para collect: {} sec'.format(tc))"
+    "print('All samples returned: type {} length {}'.format(type(all_samps1), len(all_samps1)))\n",
+    "print('First sample:', all_samps1[0])"
    ]
   },
   {
@@ -620,63 +692,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "del all_samps1\n",
-    "del all_samps2"
+    "if not forking:\n",
+    "    import os\n",
+    "    if os.path.exists('temp_module.py'):\n",
+    "        os.unlink('temp_module.py')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import gc\n",
-    "while gc.collect():\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import cProfile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cProfile.runctx(\"bs = resampling.Bootstrap(x_norm, 1000, n_jobs=1); all_samps1 = bs.all_samples()\", globals(), locals())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cProfile.runctx(\"bs = resampling.Bootstrap(x_norm, 1000, n_jobs=6); all_samps1 = bs.all_samples()\", globals(), locals())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cProfile.runctx(\"bs = resampling.Bootstrap(x_norm, 1000, n_jobs=6, alloc_shared=False); all_samps1 = bs.all_samples()\", globals(), locals())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
