Change default behavior of resamplers to emphasize confidence intervals. Update testing and demo.

--- a/docs/source/usage_demos/multitaper_estimator.ipynb
+++ b/docs/source/usage_demos/multitaper_estimator.ipynb
@@ -10,6 +10,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**TODO**: the jackknife is not working in spawn mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import multiprocessing as mp\n",
+    "try:\n",
+    "    mp.set_start_method('fork')\n",
+    "except:\n",
+    "    pass"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -408,7 +428,8 @@
     "dof_2 = 2 * len(mte_2.dpss)\n",
     "freqs, mt_psd_2, ci_2 = mte_2.compute_psd(x, adaptive_weights=True, ci=True)\n",
     "freqs, mt_psd_3, ci_3 = mt.MultitaperEstimator.psd(x, NW=7, fs=data.Fs, adaptive_weights=True, \n",
-    "                                                   ci=True, jackknife=True)\n",
+    "                                                   ci=True, jackknife=True, jn_jobs=4)\n",
+    "\n",
     "f, axs = plt.subplots(2, 1, sharex=True, sharey=True)\n",
     "axs[0].fill_between(freqs, ci_1[0], ci_1[1], color=(0.2, 0.2, 0.2), label='Chi2 {} dof'.format(dof_1))\n",
     "axs[0].fill_between(freqs, ci_2[0], ci_2[1], color=(0.6, 0.6, 0.6), label='Chi2 {} dof'.format(dof_2))\n",
@@ -581,9 +602,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "coh_spec_1, ci_1 = mt.coherence(x, 2.5, msc=True, ci=True, low_bias=.9)\n",
+    "coh_spec_1, ci_1 = mt.coherence(x, 2.5, msc=True, ci=True, low_bias=.9, jn_jobs=4)\n",
     "bw_1 = mt.nw2bw(2.5, x.shape[-1], data.Fs)\n",
-    "coh_spec_2, ci_2 = mt.coherence(x, 5, msc=True, ci=True, low_bias=True)\n",
+    "coh_spec_2, ci_2 = mt.coherence(x, 5, msc=True, ci=True, low_bias=True, jn_jobs=4)\n",
     "bw_2 = mt.nw2bw(6.5, x.shape[-1], data.Fs)"
    ]
   },
@@ -634,7 +655,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
