--- a/docs/source/usage_demos/resampling_methods.ipynb
+++ b/docs/source/usage_demos/resampling_methods.ipynb
@@ -62,7 +62,7 @@
    "source": [
     "## Simple bootstrapping\n",
     "\n",
-    "Both resampling schemes are *nonparameteric* methods to get statistics of a sampling distribution. This is in contrast to a parametric estimator analysis that pre-supposes the sampling distribution. \n",
+    "Both resampling schemes are *nonparameteric* methods to infer the distribution of samples, or a statistic of samples. This is in contrast to a parametric estimator analysis that pre-supposes the sampling/statistic distribution. \n",
     "\n",
     "**Parametric analysis**\n",
     "\n",
@@ -125,7 +125,8 @@
    "outputs": [],
    "source": [
     "mean_bs = bs.all_samples(estimator=np.mean)  # pseudo-samples from distribution\n",
-    "sample_mean = np.mean(mean_bs)\n",
+    "mean_est = np.mean(mean_bs)  # mean of bootstrap estimators\n",
+    "sample_mean = np.mean(x_norm)  # plain sample mean\n",
     "mean_dist = dists.norm(mu, (sigma_sq / N) ** 0.5)  # actual distribution\n",
     "x = np.linspace(3, 7, 100)\n",
     "px = mean_dist.pdf(x)\n",
@@ -148,7 +149,8 @@
     "plt.figure()\n",
     "_ = plt.hist(mean_bs, bins='auto', density=True, histtype='step')\n",
     "_ = plt.plot(x, px)\n",
-    "_ = plt.axvline(sample_mean, color='r', label='mean est.')\n",
+    "_ = plt.axvline(sample_mean, color='k', label='sample mean')\n",
+    "_ = plt.axvline(mean_est, color='r', label='mean est.')\n",
     "_ = plt.axvline(actual_CI[0], color='gray', ls='--')\n",
     "_ = plt.axvline(actual_CI[1], color='gray', ls='--', label='Actual CI')\n",
     "plt.legend()"
@@ -177,7 +179,8 @@
     "\n",
     "plt.figure()\n",
     "_ = plt.hist(mean_bs, bins='auto', density=True, histtype='step')\n",
-    "_ = plt.axvline(sample_mean, color='r', label='mean est.')\n",
+    "_ = plt.axvline(sample_mean, color='k', label='sample mean')\n",
+    "_ = plt.axvline(mean_est, color='r', label='mean est.')\n",
     "_ = plt.axvline(shift_CI[0], color='gray', ls='--')\n",
     "_ = plt.axvline(shift_CI[1], color='gray', ls='--', label='mean est. +/- actual CI')\n",
     "_ = plt.axvline(parametric_CI[0], color='darkorange', ls='--')\n",
@@ -193,7 +196,11 @@
    "source": [
     "### Using a simple Bootstraper\n",
     "\n",
-    "For convenience, the alpha-confidence interval (or the Bootstrapped standard error) can be requested from the Bootstrap estimator method."
+    "For convenience, the alpha-confidence interval (or the Bootstrapped standard error) can be requested from the Bootstrap estimator method. This returns\n",
+    "\n",
+    "* plain sample estimate $\\theta(x)$\n",
+    "* mean of bootstrapped estimates: $E\\{\\theta(x^{*})\\}$\n",
+    "* CI or SD of the distribution of the estimated statistic"
    ]
   },
   {
@@ -202,8 +209,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Bootstrap 95% confidence:', bs.estimate(np.mean, ci=0.95))\n",
-    "print('Boostrap standard error:', bs.estimate(np.mean, ci='se'))"
+    "print('Bootstrap 95% confidence: T[x] {}, E[T(x*)] {}, CI T[x]: {}'.format(*bs.estimate(np.mean, ci=0.95)))\n",
+    "print('Bootstrap 95% confidence: T[x] {}, E[T(x*)] {}, SE T[x]: {}'.format(*bs.estimate(np.mean, ci='se')))"
    ]
   },
   {
@@ -219,8 +226,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mu, ci = resampling.Bootstrap.bootstrap_estimate(x_norm, P, np.mean, ci=0.95)\n",
-    "print(mu, ci)"
+    "mu, bs_mu, ci = resampling.Bootstrap.bootstrap_estimate(x_norm, P, np.mean, ci=0.95)\n",
+    "print(mu, bs_mu, ci)"
    ]
   },
   {
@@ -400,19 +407,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ols_fm.scale, ols_fm.ssr / ols_fm.df_resid"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on parametric analysis, the predicted fit has a confidence interval that depends on the estimated error (``ols_fm.scale``) and the \"residual degrees of freedom\" (N - size-of-model)."
+    "Based on parametric analysis, the predicted fit has a confidence interval that depends on two factors:\n",
+    "\n",
+    "1. The error \"scale\": the residual sum of squares (``ols_fm.fm_ssr``) divided by the \"residual degrees of freedom\" (``ols_fm.df_resid``: N - size-of-model). \n",
+    "1. The sample size (which affects the standard errors of the parameters)\n",
+    "\n",
+    "The intercept and slope parameters are t-distributed with scales like: $s\\operatorname{diag}(R^{T}R)^{-1}$, where $s$ is scale and $R$ is the regressor matrix."
    ]
   },
   {
@@ -568,13 +571,13 @@
     "\n",
     "# run in a single process\n",
     "t1 = time()\n",
-    "mu_est = resampling.Bootstrap.bootstrap_estimate(x_norm, 100, np.mean, n_jobs=1)\n",
+    "mu_est = resampling.Bootstrap.bootstrap_estimate(x_norm, 100, np.mean, n_jobs=1)[1]\n",
     "tc = time() - t1\n",
     "print('mu estimate: {} ({} sec)'.format(mu_est, tc))\n",
     "\n",
     "# run in 6 processes\n",
     "t1 = time()\n",
-    "mu_est = resampling.Bootstrap.bootstrap_estimate(x_norm, 100, np.mean, n_jobs=n_jobs)\n",
+    "mu_est = resampling.Bootstrap.bootstrap_estimate(x_norm, 100, np.mean, n_jobs=n_jobs)[1]\n",
     "tc = time() - t1\n",
     "print('mu estimate: {} ({} sec, {} jobs)'.format(mu_est, tc, n_jobs))"
    ]
@@ -631,7 +634,7 @@
     "\n",
     "# run in a single process\n",
     "t1 = time()\n",
-    "mu_est = resampling.Bootstrap.bootstrap_estimate(x_norm, 100, slow_mean, n_jobs=1)\n",
+    "mu_est = resampling.Bootstrap.bootstrap_estimate(x_norm, 100, slow_mean, n_jobs=1)[1]\n",
     "tc = time() - t1\n",
     "print('mu estimate: {} ({} sec)'.format(mu_est, tc))\n",
     "\n",
@@ -639,7 +642,7 @@
     "\n",
     "# run in multiple processes\n",
     "t1 = time()\n",
-    "mu_est = resampling.Bootstrap.bootstrap_estimate(x_norm, 100, slow_mean, n_jobs=n_jobs)\n",
+    "mu_est = resampling.Bootstrap.bootstrap_estimate(x_norm, 100, slow_mean, n_jobs=n_jobs)[1]\n",
     "tc = time() - t1\n",
     "print('mu estimate: {} ({} sec, {} jobs)'.format(mu_est, tc, n_jobs))"
    ]
