update multitaper & demo to work in spawn mode

--- a/docs/source/usage_demos/multitaper_estimator.ipynb
+++ b/docs/source/usage_demos/multitaper_estimator.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "import multiprocessing as mp\n",
     "try:\n",
-    "    mp.set_start_method('fork')\n",
+    "    mp.set_start_method('spawn')\n",
     "except:\n",
     "    pass"
    ]
