--- a/docs/source/usage_demos/resampling_methods.ipynb
+++ b/docs/source/usage_demos/resampling_methods.ipynb
@@ -66,11 +66,11 @@
     "\n",
     "**Parametric analysis**\n",
     "\n",
-    "A simple parametric assumption would be a sample $\\{x\\}_{i}$ of $N$ independent and identically distributed (iid) variates from a friendly distribution with (*finite!*) mean $\\mu$ and variance $\\sigma^{2}$. It would follow that the sample mean estimator $\\hat{\\mu}=\\sum_{i}(N^{-1}x_{i})$ is a variate with mean $\\mu$ and variance $\\sigma^{2}/N$. In other words, the standard error (SE) of the mean (SEM) is $\\sigma /\\sqrt{N}$ (which is itself has an unbiased estimate using the sample variance estimator $\\hat{\\sigma}^{2}/(N-1)$).\n",
+    "A simple parametric assumption would be a sample $\\{x\\}_{i}$ of $N$ independent and identically distributed (iid) variates from a friendly distribution with (*finite!*) mean $\\mu$ and variance $\\sigma^{2}$. It would follow that the sample mean estimator $\\hat{\\mu}=\\sum_{i}(N^{-1}x_{i})$ is a variate with mean $\\mu$ and variance $\\sigma^{2}/N$. In other words, the standard error (SE) of the mean (SEM) is $\\sigma /\\sqrt{N}$ (which itself has an unbiased estimate using the sample variance estimator $\\hat{\\sigma}^{2}/(N-1)$). The distribution of the sample mean divided by the sample SEM is t-distributed in the interval around the true mean. The t-distribution has very heavy tails for low sample sizes, reflecting lower precision confidence with less information. For n=10 samples, the t-distribution is ~15% wider than a Normal, but for n=20 it is ~7% wider.\n",
     "\n",
     "**Nonparametric (bootstrap) analysis**\n",
     "\n",
-    "[Bootstrap](https://en.wikipedia.org/wiki/Bootstrapping_%28statistics%29) tries to infer the sample distribution by creates many point estimates (usually >>100) from synthetic samples. Specifically, bootstrap drawns $N$ times from the original $N$ points with replacement to emulate repeating an experiment to draw $N$ *new* points. The quantiles of the $P$ pseudo estimates are then used to infer statistics of the actual sample distribution."
+    "[Bootstrap](https://en.wikipedia.org/wiki/Bootstrapping_%28statistics%29) tries to infer the sample distribution by creates many point estimates (usually >>100) from synthetic samples. Specifically, bootstrap drawns $N$ times from the original $N$ points with replacement to emulate repeating an experiment to draw $N$ *new* points. The quantiles of the $P$ pseudo estimates are then used to infer statistics of the actual sample distribution. Bootstrap is also most reliable for symmetric distributions with finite variance. Similar to the Normal approximation for CIs, Bootstrap percentiles are also too narrow by about $\\sqrt{(N-1)/N}$, which is somewhat noticeable for small N."
    ]
   },
   {
@@ -174,7 +174,7 @@
     "shift_CI = actual_CI - 5 + sample_mean\n",
     "# unbiased sem estimator\n",
     "parametric_sem = x_norm.std() / np.sqrt(N - 1)\n",
-    "parametric_CI = dists.norm.ppf([0.025, 0.975], loc=sample_mean, scale=parametric_sem)\n",
+    "parametric_CI = dists.t.ppf([0.025, 0.975], N - 1) * parametric_sem + sample_mean\n",
     "bootstrap_CI = np.percentile(mean_bs, [2.5, 97.5])\n",
     "\n",
     "plt.figure()\n",
