update parallel context stuff

--- a/docs/source/usage_demos/resampling_methods.ipynb
+++ b/docs/source/usage_demos/resampling_methods.ipynb
@@ -22,19 +22,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import multiprocessing as mp\n",
-    "try:\n",
-    "    mp.set_start_method('fork')\n",
-    "except:\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import os\n",
     "os.environ['OMP_NUM_THREADS'] = '1'\n",
     "os.environ['VECLIB_MAXIMUM_THREADS'] = '1'\n",
@@ -561,9 +548,9 @@
    "outputs": [],
    "source": [
     "from time import time\n",
-    "import multiprocessing as mp\n",
+    "from ecogdata.parallel.mproc import parallel_context\n",
     "\n",
-    "n_jobs = max(2, mp.cpu_count() // 2)\n",
+    "n_jobs = max(2, parallel_context.cpu_count() // 2)\n",
     "\n",
     "# reuse the normal distribution\n",
     "N = int(1e6)\n",
@@ -613,7 +600,7 @@
     "    return mu\n",
     "\"\"\"\n",
     "\n",
-    "forking = mp.get_start_method() == 'fork'\n",
+    "forking = parallel_context.context_name == 'fork'\n",
     "\n",
     "# If forking, then define the method on this notebook\n",
     "# Else, do some extra-module work-around\n",
@@ -719,7 +706,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
